Fix the menu icons in IE 11.
According to MDN [1] background-size: 100% 50px; will set the height to be 50px and the width to 100% of the background positioning area. This leads to the image being stretched in IE.

This commit addresses the issue by replacing 100% with auto, so that a proportional width will be used.

This change has been tested in IE 11 and Chrome 31 through the web inspector tools.

[1] - https://developer.mozilla.org/en-US/docs/Web/CSS/background-size?redirectlocale=en-US&redirectslug=CSS%2Fbackground-size

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -170,7 +170,7 @@ ul{
                 height         : 50px;
 
                 &.menu-icon{
-                    background-size: 100% 50px;
+                    background-size: auto 50px;
                     background-position: center 50px;
                     background-repeat: no-repeat;
                 }
